// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test suite for UserOnboarding container component Because snaphots 1`] = `
<div
  className="row"
>
  <div
    className="col-xs-12"
  >
    <h1
      className="au-display-xl"
      title="Welcome to the Marketplace"
    >
      Welcome to the Marketplace
    </h1>
    <p>
      <a
        href="/login"
      >
        Log in
      </a>
       to set up your seller profile on the Marketplace.
    </p>
  </div>
</div>
`;

exports[`Test suite for UserOnboarding container component Because snaphots 2`] = `
<div
  className="row"
>
  <div
    className="col-sm-push-2 col-sm-8 col-xs-12"
  >
    <h1
      className="au-display-xl"
      title="Welcome to the Marketplace"
    >
      Welcome to the Marketplace
    </h1>
    <p>
      How can we help you?
    </p>
    <h2
      className="au-display-lg"
    >
      Read the Marketplace guides, contracts and compliance information
    </h2>
    <span>
      <a
        href="https://marketplace1.zendesk.com/hc/en-gb/categories/115001542047-Buyer-guide-and-FAQs"
      >
        Learn more
      </a>
    </span>
    <h2
      className="au-display-lg"
    >
      Create a new opportunity for a digital specialist or outcome
    </h2>
    <span>
      <a
        href="/2/buyer-dashboard"
      >
        Start a new brief
      </a>
    </span>
    <h2
      className="au-display-lg"
    >
      Need help writing a brief?
    </h2>
    <span>
      All you need to do is 
      <a
        href="https://marketplace1.zendesk.com/hc/en-gb/requests/new"
      >
        contact us
      </a>
    </span>
  </div>
</div>
`;
